tests/miniJava/neg/003864_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if true 0 ) { } else { } } }
